[KT-221] Fix competition registration on smaller screens (#70)

--- a/frontend/src/app/components/competition-registration/competition-registration.component.css
+++ b/frontend/src/app/components/competition-registration/competition-registration.component.css
@@ -28,7 +28,7 @@ section {
   flex-direction: column;
 }
 
-.input-wrapper input {
+.input-wrapper select {
   width: 300px;
   height: 50px;
   border-radius: 5px;
@@ -38,7 +38,7 @@ section {
 }
 
 .input-wrapper label {
-  font-size: 23px;
+  font-size: 22px;
   color: var(--secondary-color);
 }
 
@@ -67,7 +67,7 @@ p {
 }
 
 #competition-name {
-  font-size: 23px;
+  font-size: 25px !important;
 }
 
 .input-wrapper select {
@@ -78,6 +78,10 @@ p {
   font-size: 19px;
   color: var(--primary-color);
   background-color: white;
+}
+
+#competition-info p {
+  font-size: 19px;
 }
 
 form {
@@ -91,10 +95,10 @@ form {
 @media (max-width: 768px) {
   #main-div {
     width: 260px;
-    height: 350px;
+    height: 650px;
   }
 
-  .input-wrapper input {
+  .input-wrapper select {
     width: 220px;
     height: 35px;
     border-radius: 5px;
@@ -107,8 +111,17 @@ form {
   }
 
   button {
-    width: 110px;
+    width: 180px;
     height: 35px;
     font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  #competition-name {
+    font-size: 19px !important;
+  }
+
+  #competition-info p {
+    font-size: 17px;
   }
 }
